implement get raw results